--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Shubham</title>
-</head>
-<body>
-
-</body>
+	<head>
+		<title>
+			Aw
+		</title>
+	</head>
+	<body>
+	</body>
 </html>
